Fixed Image In HTML

--- a/page_1/page_1.html
+++ b/page_1/page_1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="page-1.css" />
+    <link rel="stylesheet" href="page_1.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,6 +18,9 @@
         <img src="image/logo.png" alt="" />
       </div>
       <button class="btn">Start Now >>></button>
+    </div>
+    <div class="credits">
+      <p>Made with ❤️ by <a href="#">@Camper</a></p>
     </div>
   </body>
 </html>
