--- a/page_2.html
+++ b/page_2.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="page_2.css" />
+    <script type="module" src="page_2.js" defer></script>
     <title>Your Page Title</title>
   </head>
   <body>
@@ -17,10 +18,12 @@
       <header>
         <div class="main-con">
           <div class="main-logo">
-            <img
-              src="page_2_logo.png"
-              alt="Your Company Name or Logo Description"
-            />
+            <a href="">
+              <img
+                src="/image/page_2_logo.png"
+                alt="Your Company Name or Logo Description"
+              />
+            </a>
           </div>
           <div class="speaker-svg" aria-label="Speaker Icon" role="img">
             <svg
@@ -39,27 +42,14 @@
           </div>
         </div>
       </header>
-      <div class="question-num_p"><span class="question-num">02/25</span></div>
+      <div class="question-num_p"><span class="question-num">1/25</span></div>
       <section class="question-sec">
         <div class="question">
-          <h1>Inside which HTML element do we put the JavaScript?</h1>
+          <h1></h1>
         </div>
       </section>
       <div class="timer-p"><span class="timer">00:30</span></div>
-      <section class="choice-por">
-        <div class="container-inputs">
-          <input type="text" name="" id="" />
-        </div>
-        <div class="container-inputs">
-          <input type="text" name="" id="" />
-        </div>
-        <div class="container-inputs">
-          <input type="text" name="" id="" />
-        </div>
-        <div class="container-inputs">
-          <input type="text" name="" id="" />
-        </div>
-      </section>
+      <section class="choice-por"></section>
       <div class="nav">
         <a href="#">Next></a>
       </div>
