--- a/page_3.html
+++ b/page_3.html
@@ -18,17 +18,18 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/e07f5faae6.js"
       crossorigin="anonymous"
       defer
     ></script>
+    <link rel="stylesheet" href="page_3.css" />
+    <script src="page_1.js" defer></script>
   </head>
   <body>
     <header>
       <div class="logo" aria-label="Website Logo">
-        <img src="images/logo.png" alt="Company Logo" />
+        <img src="image/page_3.png" alt="Company Logo" />
       </div>
       <h2 class="result">Result</h2>
     </header>
@@ -36,7 +37,7 @@
     <main class="">
       <section class="result-section">
         <div class="graph">
-          <img src="images/graph.png" alt="Graph showing results" />
+          <img src="image/graph.png" alt="Graph showing results" />
         </div>
         <h2 class="qoute">“Keep learning, you have a good score!”</h2>
       </section>
