--- a/page_2.html
+++ b/page_2.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="page_2.css" />
     <script type="module" src="page_2.js" defer></script>
-    <title>Your Page Title</title>
+    <title>Quiz</title>
   </head>
   <body>
     <main>
@@ -48,7 +48,7 @@
           <h1></h1>
         </div>
       </section>
-      <div class="timer-p"><span class="timer">00:30</span></div>
+      <div class="timer-p"><span class="timer">00:00</span></div>
       <section class="choice-por"></section>
       <div class="nav">
         <a href="#">Next></a>
