--- a/page_2.html
+++ b/page_2.html
@@ -42,7 +42,7 @@
           </div>
         </div>
       </header>
-      <div class="question-num_p"><span class="question-num">1/25</span></div>
+      <div class="question-num_p"><span class="question-num"></span></div>
       <section class="question-sec">
         <div class="question">
           <h1></h1>
