--- a/page_3.html
+++ b/page_3.html
@@ -36,9 +36,15 @@
 
     <main class="">
       <section class="result-section">
-        <div class="graph">
-          <img src="image/graph.png" alt="Graph showing results" />
-        </div>
+        <main>
+          <section id="skills" class="toad-fullscreen">
+            <article class="skills">
+              <div class="t-6">
+                <p>HTML5<span></span><span class="skills"></span></p>
+              </div>
+            </article>
+          </section>
+        </main>
         <h2 class="qoute">“Keep learning, you have a good score!”</h2>
       </section>
 
