--- a/page_2.html
+++ b/page_2.html
@@ -20,7 +20,7 @@
           <div class="main-logo">
             <a href="">
               <img
-                src="/image/page_2_logo.png"
+                src="/image/page_2.png"
                 alt="Your Company Name or Logo Description"
               />
             </a>
