--- a/page_2.html
+++ b/page_2.html
@@ -6,12 +6,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="shortcut icon"
+      href="image/light-bulb-color-icon.svg"
+      type="image/x-icon"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="page_2.css" />
     <script type="module" src="page_2.js" defer></script>
-    <title>Quiz</title>
+    <title>Quiz Time</title>
   </head>
   <body>
     <main>
@@ -42,7 +47,7 @@
           </div>
         </div>
       </header>
-      <div class="question-num_p"><span class="question-num"></span></div>
+      <div class="question-num_p"><span class="question-num">Q-NO</span></div>
       <section class="question-sec">
         <div class="question">
           <h1></h1>
