--- a/page_3.html
+++ b/page_3.html
@@ -5,54 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="View your results and graph with a motivational message."
-    />
-    <meta
-      name="keywords"
-      content="results, score, graph, retry, motivational quote"
+      content="View your results with a motivational message."
     />
     <title>Results Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="shortcut icon"
+      href="image/light-bulb-color-icon.svg"
+      type="image/x-icon"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600;900&display=swap"
       rel="stylesheet"
     />
-    <script
-      src="https://kit.fontawesome.com/e07f5faae6.js"
-      crossorigin="anonymous"
-      defer
-    ></script>
     <link rel="stylesheet" href="page_3.css" />
-    <script src="page_1.js" defer></script>
   </head>
   <body>
     <header>
       <div class="logo" aria-label="Website Logo">
         <img src="image/page_3.png" alt="Company Logo" />
       </div>
-      <h2 class="result">Result</h2>
+      <h2 class="title">Result</h2>
     </header>
 
-    <main class="">
-      <section class="result-section">
-        <main>
-          <section id="skills" class="toad-fullscreen">
-            <article class="skills">
-              <div class="t-6">
-                <p>HTML5<span></span><span class="skills"></span></p>
-              </div>
-            </article>
-          </section>
-        </main>
-        <h2 class="qoute">“Keep learning, you have a good score!”</h2>
-      </section>
+    <main>
+      <div class="abu">
+        <div class="parent-container">
+          <div class="green-arrow">
+            <img src="image/green Arrow.svg" alt="" />
+            <div class="green-arrow-text"><span>30%</span></div>
+          </div>
+          <div class="red-arrow">
+            <img src="image/red Arrow.svg" alt="" />
+            <div class="red-arrow-text"><span>70%</span></div>
+          </div>
 
-      <section class="cta-section">
-        <div class="btn-parent">
-          <button class="btn" aria-label="Click to retry">Retry</button>
+          <div class="graph-container">
+            <div class="graph">
+              <div class="green"></div>
+              <div class="red"></div>
+            </div>
+            <div class="graph-text"><span>22/25</span></div>
+          </div>
         </div>
-      </section>
+      </div>
+      <div class="middle-text">
+        <h2 class="quote">“Keep learning, you have a good score!”</h2>
+        <div class="btn-parent">
+          <button class="btn" aria-label="Click to retry">
+            &lt;&lt;&lt; Retry
+          </button>
+        </div>
+      </div>
     </main>
 
     <footer>
@@ -63,37 +68,23 @@
             href="https://www.facebook.com/sharer/sharer.php?u=YOUR_URL"
             target="_blank"
           >
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-              <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
-              <path
-                d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
-              />
-            </svg>
+            <img src="image/facebook.svg" alt="Facebook" />
           </a>
           <a
             href="https://twitter.com/intent/tweet?url=YOUR_URL&text=Check%20out%20my%20score!"
             target="_blank"
           >
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-              <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
-              <path
-                d="M459.4 151.7c.3 4.5 .3 9.1 .3 13.6 0 138.7-105.6 298.6-298.6 298.6-59.5 0-114.7-17.2-161.1-47.1 8.4 1 16.6 1.3 25.3 1.3 49.1 0 94.2-16.6 130.3-44.8-46.1-1-84.8-31.2-98.1-72.8 6.5 1 13 1.6 19.8 1.6 9.4 0 18.8-1.3 27.6-3.6-48.1-9.7-84.1-52-84.1-103v-1.3c14 7.8 30.2 12.7 47.4 13.3-28.3-18.8-46.8-51-46.8-87.4 0-19.5 5.2-37.4 14.3-53 51.7 63.7 129.3 105.3 216.4 109.8-1.6-7.8-2.6-15.9-2.6-24 0-57.8 46.8-104.9 104.9-104.9 30.2 0 57.5 12.7 76.7 33.1 23.7-4.5 46.5-13.3 66.6-25.3-7.8 24.4-24.4 44.8-46.1 57.8 21.1-2.3 41.6-8.1 60.4-16.2-14.3 20.8-32.2 39.3-52.6 54.3z"
-              />
-            </svg>
+            <img src="image/twitter.svg" alt="Twitter" />
           </a>
           <a
             href="https://www.linkedin.com/shareArticle?url=YOUR_URL"
             target="_blank"
           >
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-              <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
-              <path
-                d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
-              />
-            </svg>
+            <img src="image/linkedin.svg" alt="LinkedIn" />
           </a>
         </div>
       </div>
+      <p class="footer-text-sec">Made with ❤️ by <a href="">@Camper</a></p>
     </footer>
   </body>
 </html>
