--- a/Quiz.html
+++ b/Quiz.html
@@ -14,8 +14,8 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="page_2.css" />
-    <script type="module" src="page_2.js" defer></script>
+    <link rel="stylesheet" href="Quiz.css" />
+    <script type="module" src="Quiz.js" defer></script>
     <title>Quiz Time</title>
   </head>
   <body>
@@ -56,7 +56,7 @@
       <div class="timer-p"><span class="timer">00:00</span></div>
       <section class="choice-por"></section>
       <div class="nav">
-        <a href="#">Next></a>
+        <a href="#">Result>>></a>
       </div>
       <p class="credits">Made with ❤️ by<a href="">@Camper</a></p>
     </main>
