--- a/Result.html
+++ b/Result.html
@@ -19,7 +19,9 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="page_3.css" />
+    <link rel="stylesheet" href="Result.css" />
+
+    <script src="Result.js" type="module" defer></script>
   </head>
   <body>
     <header>
@@ -46,7 +48,11 @@
               <div class="green"></div>
               <div class="red"></div>
             </div>
-            <div class="graph-text"><span>22/25</span></div>
+            <div class="graph-text"><span></span></div>
+            <div>
+              <div class="graph-text"><span></span></div>
+              <div class="graph-text"><span></span></div>
+            </div>
           </div>
         </div>
       </div>
