--- a/index.html
+++ b/index.html
@@ -1,33 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      rel="shortcut icon"
-      href="image/light-bulb-color-icon.svg"
-      type="image/x-icon"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="Started-Now.css" />
-    <script src="Started-Now.js" defer></script>
-    <title>Document</title>
-  </head>
 
-  <body>
-    <div class="parent">
-      <div class="main-page-logo">
-        <img src="image/logo.png" alt="" />
-      </div>
-      <button class="btn">Start Now >>></button>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="shortcut icon" href="image/light-bulb-color-icon.svg" type="image/x-icon" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="Started-Now.css" />
+  <script src="Started-Now.js" defer></script>
+  <title>Document</title>
+</head>
+
+<body>
+  <div class="parent">
+    <div class="main-page-logo">
+      <img src="image/logo.png" alt="" />
     </div>
-    <div class="credits">
-      <p>Made with ❤️ by <a href="#">@Camper</a></p>
-    </div>
-  </body>
+    <button class="btn">Start Now >>></button>
+  </div>
+  <div class="credits">
+    <p>Made with ❤️ by <a href="#">@Camper</a></p>
+  </div>
+</body>
+
 </html>
