--- a/Result.html
+++ b/Result.html
@@ -73,7 +73,8 @@
         </a>
       </div>
     </div>
-    <p class="footer-text-sec">Made with ❤️ by <a href="">@Camper</a></p>
+    <p class="footer-text-sec">Made with ❤️ by <a target="_blank" href="
+      https://github.com/unknown-dev2397/Challenge_Project/">@camper</a> </p>
   </footer>
 </body>
 
