--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <button class="btn">Start Now</button>
 
   </div>
-  <p class="credits"> Made with ❤️ by Anurag Singh </p>
-  </div>
+  <p class="credits"> Made with ❤️ by <a target="_blank" href="
+      https://github.com/unknown-dev2397/Challenge_Project/">@camper</a> </p>
 </body>
 
 </html>
