--- a/Result.html
+++ b/Result.html
@@ -62,13 +62,13 @@
     <h3 class="footer-text">Share your score:</h3>
     <div class="parent-social">
       <div class="social-media">
-        <a href="https://www.facebook.com/sharer/sharer.php?u=YOUR_URL" target="_blank">
+        <a href="" target="_blank">
           <img src="image/facebook.svg" alt="Facebook" />
         </a>
-        <a href="https://twitter.com/intent/tweet?url=YOUR_URL&text=Check%20out%20my%20score!" target="_blank">
+        <a href="" target="_blank">
           <img src="image/twitter.svg" alt="Twitter" />
         </a>
-        <a href="https://www.linkedin.com/shareArticle?url=YOUR_URL" target="_blank">
+        <a href="" target="_blank">
           <img src="image/linkedin.svg" alt="LinkedIn" />
         </a>
       </div>
