--- a/index.html
+++ b/index.html
@@ -1,29 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="shortcut icon"
+      href="image/light-bulb-color-icon.svg"
+      type="image/x-icon"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="Started-Now.css" />
+    <script src="Started-Now.js" defer></script>
+    <title>Home | My Website</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="shortcut icon" href="image/light-bulb-color-icon.svg" type="image/x-icon" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet" />
-  <link rel="stylesheet" href="Started-Now.css" />
-  <script src="Started-Now.js" defer></script>
-  <title>Home | My Website</title>
-</head>
-
-<body>
-  <div class="parent">
-    <div class="main-page-logo">
-      <img src="image/logo.png" alt="Company Logo" />
+  <body>
+    <div class="parent">
+      <div class="main-page-logo">
+        <img src="image/logo.png" alt="Company Logo" />
+      </div>
+      <button class="btn">Start Now</button>
     </div>
-    <button class="btn">Start Now</button>
-
-  </div>
-  <p class="credits"> Made with ❤️ by <a target="_blank" href="
-      https://github.com/unknown-dev2397/Challenge_Project/">@camper</a> </p>
-</body>
-
+    <p class="credits">
+      Made with ❤️ by
+      <a
+        target="_blank"
+        href="
+        https://github.com/unknown-dev2397/Challenge_Project/"
+        >@camper</a
+      >
+    </p>
+  </body>
 </html>
